# tech-challenge-p3

./: .env.sample  .gitignore  README.md  pyproject.toml  test.ipynb
api/: app.py
notebooks/: test.ipynb
