[tool.poetry]
name = "tech-challenge-p3"
version = "0.1.0"
description = ""
authors = ["Diogo Padilha <dcpadilha31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.5"
requests = "^2.32.3"
boto3 = "^1.35.68"
pydantic = "^2.10.1"
opendatasets = "^0.1.22"
scikit-learn = "^1.5.2"
streamlit = "^1.40.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.8.0"
httpx = "^0.27.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
